[gd_scene load_steps=21 format=3 uid="uid://cwl4l0u85mxgx"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_m25uy"]
[ext_resource type="Texture2D" uid="uid://l2c7y1qinh00" path="res://assets/House.png" id="1_s5ggj"]
[ext_resource type="Script" path="res://player_kitchen.gd" id="2_q3nm1"]
[ext_resource type="Texture2D" uid="uid://bvvm6v746gnh8" path="res://assets/Matt_Daemon.png" id="3_kek8y"]
[ext_resource type="Texture2D" uid="uid://vfd8r0cyab5d" path="res://assets/Matt_Walk_0.png" id="4_5fqrh"]
[ext_resource type="Texture2D" uid="uid://dnd6morrlwdog" path="res://assets/Matt_Walk_1.png" id="5_l7m7n"]
[ext_resource type="Texture2D" uid="uid://dgk0cjprrvjus" path="res://assets/Matt_Cook.png" id="5_pf2tv"]
[ext_resource type="Texture2D" uid="uid://c3elbi8jboqjm" path="res://assets/Matt_Walk_2.png" id="6_3xd00"]
[ext_resource type="Texture2D" uid="uid://nacaka1bxvkf" path="res://assets/Matt_Walk_3.png" id="7_ynv1w"]
[ext_resource type="Script" path="res://AttackArea2D.gd" id="9_18u7f"]
[ext_resource type="Script" path="res://KitchenAppliance.gd" id="9_jctj6"]
[ext_resource type="AudioStream" uid="uid://c4w1472sqmes" path="res://assets/Sizzling Egg.wav" id="10_gf45j"]
[ext_resource type="AudioStream" uid="uid://dlilskf0f8w5u" path="res://assets/Hell's Kitchen.ogg" id="12_cikmr"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ilde6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2xwxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_pf2tv")
}],
"loop": true,
"name": &"cook",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kek8y")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5fqrh")
}, {
"duration": 1.0,
"texture": ExtResource("5_l7m7n")
}, {
"duration": 1.0,
"texture": ExtResource("6_3xd00")
}, {
"duration": 1.0,
"texture": ExtResource("7_ynv1w")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hpe6a"]
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1ni1"]
size = Vector2(200, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4sng3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3osog"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1n0nd"]
size = Vector2(887.302, 44.4444)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5n6wt"]
size = Vector2(1336.91, 60.7937)

[node name="Game" type="Node2D"]
material = SubResource("CanvasItemMaterial_ilde6")
script = ExtResource("1_m25uy")

[node name="Entities" type="Node2D" parent="."]
z_index = 1
y_sort_enabled = true
scale = Vector2(1, 1.04912)

[node name="Player" type="CharacterBody2D" parent="Entities"]
position = Vector2(174, 36)
script = ExtResource("2_q3nm1")

[node name="Camera2D" type="Camera2D" parent="Entities/Player"]
position = Vector2(0, -68)
limit_left = -500
limit_top = -500
limit_right = 500
limit_bottom = 500
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true

[node name="Visual" type="Node2D" parent="Entities/Player"]
scale = Vector2(1, 1.00476)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Entities/Player/Visual"]
position = Vector2(-7, 0)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_2xwxc")
animation = &"cook"
offset = Vector2(0, -170)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/Player"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hpe6a")

[node name="AttackArea2D" type="Area2D" parent="Entities/Player"]
scale = Vector2(0.998183, 1)
script = ExtResource("9_18u7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/Player/AttackArea2D"]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_d1ni1")

[node name="Fridge" type="StaticBody2D" parent="Entities"]
position = Vector2(-205, -166.806)
script = ExtResource("9_jctj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/Fridge"]
position = Vector2(-3, -18.1104)
shape = SubResource("RectangleShape2D_4sng3")

[node name="Stove" type="StaticBody2D" parent="Entities"]
position = Vector2(98, -198.261)
script = ExtResource("9_jctj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/Stove"]
shape = SubResource("RectangleShape2D_3osog")

[node name="EggSizzle" type="AudioStreamPlayer2D" parent="Entities/Stove"]
position = Vector2(-98, 198.261)
scale = Vector2(1, 0.95318)
stream = ExtResource("10_gf45j")

[node name="Map" type="Sprite2D" parent="."]
scale = Vector2(0.63, 0.63)
texture = ExtResource("1_s5ggj")

[node name="Colliders" type="Node2D" parent="Map"]

[node name="Collider" type="StaticBody2D" parent="Map/Colliders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Colliders/Collider"]
position = Vector2(18.2539, -190.476)
shape = SubResource("RectangleShape2D_1n0nd")

[node name="Collider2" type="StaticBody2D" parent="Map/Colliders"]
position = Vector2(-69.8413, -41.2698)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Colliders/Collider2"]
position = Vector2(149.206, -195)
shape = SubResource("RectangleShape2D_5n6wt")

[node name="Collider2" type="StaticBody2D" parent="Map/Colliders/Collider2"]
position = Vector2(-41.2699, 944.445)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Colliders/Collider2/Collider2"]
position = Vector2(165.079, -200)
shape = SubResource("RectangleShape2D_5n6wt")

[node name="Collider3" type="StaticBody2D" parent="Map/Colliders"]
position = Vector2(-601.587, 141.27)
rotation = -1.43641
scale = Vector2(0.999999, 0.999999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Colliders/Collider3"]
position = Vector2(-16.6207, 31.0787)
shape = SubResource("RectangleShape2D_5n6wt")

[node name="Collider4" type="StaticBody2D" parent="Map/Colliders"]
position = Vector2(682.54, 193.651)
rotation = -1.64934
scale = Vector2(0.999999, 0.999999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Colliders/Collider4"]
position = Vector2(-16.6207, 31.0787)
shape = SubResource("RectangleShape2D_5n6wt")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_cikmr")
autoplay = true

[node name="FridgeLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -299.0
offset_top = -102.0
offset_right = -69.0
offset_bottom = 198.0
text = "Breakfast time! Come over here and press \"F\" to grab an egg."

[node name="StoveLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -5.0
offset_top = -104.0
offset_right = 225.0
offset_bottom = 196.0
text = "Nice! Now come over here and press \"F\" to fry the egg."

[connection signal="interacted" from="Entities/Fridge" to="." method="_on_fridge_interacted"]
[connection signal="interacted" from="Entities/Stove" to="." method="_on_stove_interacted"]
